# fastapi

./: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_db.sqlite3
.github/workflows/: ci.yml
frontend/: index.html
scripts/: init_db.py  wait-for-it.sh
src/app/: main.py
src/app/api/v1/endpoints/: admin.py  package_types.py  packages.py
src/app/config/: settings.py
src/app/core/: cache.py  database.py  logging.py  session.py
src/app/models/: package.py
src/app/schemas/: package.py
src/app/services/: currency_service.py  delivery_calculator.py  package_service.py
src/app/tasks/: delivery_calculation.py
src/tests/: conftest.py
src/tests/test_api/: test_packages.py
src/tests/test_services/: test_currency_service.py  test_package_service.py
