[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "Modern FastAPI project"
authors = ["Your Name <email@example.com>"]
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
sqlalchemy = "2.0.23"
alembic = "1.12.1"
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
aiomysql = "0.2.0"
redis = "5.0.1"
httpx = "0.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
pre-commit = "3.6.0"
ruff = "0.1.6"
faker = "19.13.0"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"